@@ -1,35 +1,17 @@
 // Microsoft Visual C++ generated resource script.
 //
-#include "resrc1.h"
 
-#define APSTUDIO_READONLY_SYMBOLS
-/////////////////////////////////////////////////////////////////////////////
-//
-// Generated from the TEXTINCLUDE 2 resource.
-//
+
 #include "resource.h"
-#define APSTUDIO_HIDDEN_SYMBOLS
 #include "windows.h"
-#undef APSTUDIO_HIDDEN_SYMBOLS
 
-/////////////////////////////////////////////////////////////////////////////
-#undef APSTUDIO_READONLY_SYMBOLS
-
-/////////////////////////////////////////////////////////////////////////////
-// English (Australia) resources
-
-#if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENA)
-#ifdef _WIN32
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
-#pragma code_page(1252)
-#endif //_WIN32
 
 /////////////////////////////////////////////////////////////////////////////
 //
 // RT_MANIFEST
 //
 
-1                       RT_MANIFEST             "res/Win32++.manifest"
+1                       24             "res/Win32++.manifest"
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -46,20 +28,20 @@ IDW_MAIN                ICON                    "res/Dialog.ico"
 //
 
 IDD_DIALOG1 DIALOGEX 0, 0, 248, 201
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | 
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE |
     WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Server Dialog"
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 8, "MS Shell Dlg", 0, 0
 BEGIN
-    EDITTEXT        IDC_EDIT_SEND,21,145,96,35,ES_MULTILINE | ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_EDIT_SEND,21,145,96,35,ES_MULTILINE | ES_AUTOHSCROLL |
                     WS_DISABLED | NOT WS_BORDER,WS_EX_STATICEDGE
     PUSHBUTTON      "Start Server",IDC_BUTTON_START,160,57,63,24
     GROUPBOX        "Server Configuration",IDC_STATIC,16,7,213,80,BS_LEFT
     GROUPBOX        "Send / Receive Data",IDC_STATIC,16,95,213,91,BS_LEFT
-    EDITTEXT        IDC_EDIT_RECEIVE,130,145,93,35,ES_MULTILINE | 
+    EDITTEXT        IDC_EDIT_RECEIVE,130,145,93,35,ES_MULTILINE |
                     ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
-    EDITTEXT        IDC_EDIT_STATUS,21,33,95,48,ES_MULTILINE | 
+    EDITTEXT        IDC_EDIT_STATUS,21,33,95,48,ES_MULTILINE |
                     ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     CTEXT           "Server Status",IDC_STATIC,21,22,95,9
     CTEXT           "Type data to Send ",IDC_STATIC,36,136,64,9
@@ -74,13 +56,13 @@ BEGIN
 END
 
 IDD_DIALOG2 DIALOGEX 0, 0, 186, 86
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | 
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE |
     WS_CAPTION | WS_SYSMENU
 CAPTION "Server TCP Chat"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+FONT 8, "MS Shell Dlg", 400, 0
 BEGIN
     EDITTEXT        IDC_EDIT_SEND2,7,37,79,42,ES_MULTILINE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_RECEIVE2,98,37,81,42,ES_MULTILINE | 
+    EDITTEXT        IDC_EDIT_RECEIVE2,98,37,81,42,ES_MULTILINE |
                     ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     CTEXT           "Type data to send",IDC_STATIC,7,29,79,8
     CTEXT           "Received data",IDC_STATIC,98,29,81,8
@@ -89,46 +71,4 @@ BEGIN
 END
 
 
-#ifdef APSTUDIO_INVOKED
-/////////////////////////////////////////////////////////////////////////////
-//
-// TEXTINCLUDE
-//
-
-1 TEXTINCLUDE 
-BEGIN
-    "resrc1.h\0"
-END
-
-2 TEXTINCLUDE 
-BEGIN
-    "#include ""resource.h""\r\n"
-    "#define APSTUDIO_HIDDEN_SYMBOLS\r\n"
-    "#include ""windows.h""\r\n"
-    "#undef APSTUDIO_HIDDEN_SYMBOLS\r\n"
-    "\0"
-END
-
-3 TEXTINCLUDE 
-BEGIN
-    "\r\n"
-    "\0"
-END
-
-#endif    // APSTUDIO_INVOKED
-
-#endif    // English (Australia) resources
-/////////////////////////////////////////////////////////////////////////////
-
-
-
-#ifndef APSTUDIO_INVOKED
-/////////////////////////////////////////////////////////////////////////////
-//
-// Generated from the TEXTINCLUDE 3 resource.
-//
-
-
-/////////////////////////////////////////////////////////////////////////////
-#endif    // not APSTUDIO_INVOKED
 
