@@ -10,43 +10,50 @@ using namespace Win32xx;
 class CClientSocket : public CSocket
 {
 public:
-  CClientSocket() {}
-  virtual void OnReceive()
-  {
-	  char str[1024] = {0};
-	  int i = Receive(str, 1024, 0);
+	CClientSocket() {}
+	virtual void OnReceive()
+	{
+		// This function is called automatically when there is data to receive
+		char str[1024] = {0};
+		int i = Receive(str, 1024, 0);
 
-	  cout << i << " chars received: " << str << endl;
-  }
+		cout << i << " chars received: " << str << endl;
+	}
 };
 
 int main()
 {
-    CClientSocket Client;
+	CClientSocket Client;
 
-    if (!Client.Create(SOCK_STREAM))
-    {
-        cout << "Failed to create socket\n" ;
-        return 0;
-    }
+	// Create the socket to communicate with the Server
+	if (!Client.Create(SOCK_STREAM))
+	{
+		cout << "Failed to create socket\n" ;
+		return 0;
+	}
 
-    if (SOCKET_ERROR == Client.Connect("127.0.0.1", 3000))
-    {
-        cout << "Failed to connect to server. Was it running?\n";
-        return 0;
-    }
-    cout << "Connected to server.\n";
-    cout << "Type data to send, type quit to exit\n";
+	// Connect to the server
+	if (SOCKET_ERROR == Client.Connect("127.0.0.1", 3000))
+	{
+		cout << "Failed to connect to server. Was it running?\n";
+		return 0;
+	}
+	cout << "Connected to server.\n";
+	cout << "Type data to send, type quit to exit\n";
 
-    Client.StartEvents();
-    string s;
-    for (;;)
-    {
-        getline(cin, s);
-        if (s == "quit") break;
-        int i = Client.Send(s.c_str(), (int)s.length(), 0);
-        cout << "Sending  " << i << " characters\n";
-    }
+	// Monitor the client socket for network events, such as data ready to receive
+	Client.StartEvents();
 
-    return 0;
+	// Send data to the server
+	string s;
+	for (;;)	// Infinite loop
+	{
+		getline(cin, s);
+		if (s == "quit") break;
+		int i = Client.Send(s.c_str(), (int)s.length(), 0);
+		cout << "Sending  " << i << " characters\n";
+	}
+
+	return 0;
 }
+
