@@ -35,7 +35,7 @@
 ////////////////////////////////////////////////////////
 
 
-//////////////////////////////////////////
+////////////////////////////////////////////////////////
 // Frame.h
 //  Declaration of the CFrame, CStatusbar and CToolbar classes
 
